# Telegram-Ads-Mini-App

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  env.example  setup_server.sh
.cargo/: config.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: tonconnect-manifest.json
frontend/src/: App.tsx  index.css  main.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m20260202_130751_initial_setup.rs  m20260202_132826_trigger_automatic_update.rs  m20260203_174902_add_media_to_campaigns.rs  m20260203_201436_create_bot_observed_channels_table.rs  m20260203_210710_add_user_details.rs  m20260203_213822_fix_missing_updated_at.rs  m20260203_220707_add_channel_category.rs  m20260203_add_campaigns.rs  m20260203_add_channel_enhancements.rs  m20260203_add_escrow.rs  m20260203_enhance_deals.rs  m20260205_add_deal_refactor_columns.rs  m20260205_add_owner_and_fk_constraints.rs  m20260208_analytics_update.rs  m20260213_add_campaign_enhancements.rs
src/: main.rs
src/auth/: auth.rs
src/entity/: bot_observed_channels.rs  campaign_applications.rs  campaigns.rs  channel_ad_formats.rs  channel_admins.rs  channels.rs  deal_creatives.rs  deal_negotiations.rs  deals.rs  escrow_wallets.rs  mod.rs  prelude.rs  transactions.rs  users.rs
src/handlers/: bot.rs  campaigns.rs  channels.rs  deals.rs  mod.rs  payments.rs  users.rs
src/helpers/: notifications.rs  utils.rs
src/models/: campaign.rs  channel.rs  deal.rs  errors.rs  mod.rs  payload.rs  payment.rs
src/services/: admin_verification.rs  auto_post.rs  mod.rs  (+7 more)
(+21 files in other folders)
