[package]
name = "telegram-ad-mini-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
teloxide = { version = "0.12", features = ["macros", "rustls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
tokio-cron-scheduler = "0.9"
hmac = "0.12"
sha2 = "0.10"
url = "2.5"
sea-orm = { version = "2.0.0-rc.30", features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "macros",
] }
hex = "0.4"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
] }
init-data-rs = "0.1.4"
thiserror = "2.0.18"
anyhow = "1.0.100"
aes-gcm = "0.10"
chrono = "0.4"
rust_decimal = "1.36"
urlencoding = "2.1.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }


[dev-dependencies]
sea-orm-migration = { version = "2.0.0-rc.30", features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
] }
# TON integration commented out for MVP - will implement mock escrow first
# tonlib = "0.17.6"
# tonlib-sys = "2025.12"

